<resources>
    <string name="app_name">Nutroblast</string>

    <string name="title_section1">Summary</string>
    <string name="title_section2">Add Food</string>
    <string name="title_section3">My Profile</string>
    <string name="title_section4">About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <!-- Summary Screen -->
    <string name="about_you_card">About You</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height:</string>
    <string name="height_centimetres">cm</string>
    <string name="weight">Weight:</string>
    <string name="weight_kg">kg</string>

    <string name="focus_on_card">Focus On Goals</string>
    <string name="summary_report">Summary Report</string>

    <string name="scanBarcode">Scan Barcode</string>
    <string name="searchFoods">Search Foods</string>
    <string name="addFood">Add Food</string>
    <string name="AddMeal">Add a meal</string>
    <string name="AddDiet">Add Diet</string>
    <string name="iron_intake">Iron Intake</string>
    <string name="calorie_control">Calorie Control</string>
    <string-array name="weight_setting_array">
        <item>Weight Gain</item>
        <item>Weight Loss</item>
    </string-array>
    <string name="glucose">Glucose Intake</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="accept_button">Update Details</string>


    <string name="daily_requirement_report">Daily Requirement Report</string>

    <!-- About Screen -->
    <string name="about">NutroBlast - Ulster Museum Hackathon 2015</string>
    <string name="version">Version 1.0</string>
    <string name="details_saved">Details Saved Successfully!</string>
</resources>
