<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:background="@color/green">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/submitMasterView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                style="@style/summaryScreenCards"
                android:id="@+id/card_view">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/summaryCardTitle"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_you_card"
                        android:id="@+id/summaryTitle" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <TextView
                            style="@style/summaryCardContents"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/nameEditText"
                            android:minWidth="250dp"
                            android:maxLength="20"
                            android:inputType="textPersonName" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">


                        <TextView
                            style="@style/summaryCardContents"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/age" />

                        <EditText
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:ems="10"
                            android:id="@+id/agedEditText"
                            android:layout_marginLeft="10dp"
                            android:maxLength="3" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">


                        <TextView
                            style="@style/summaryCardContents"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gender" />

                        <RadioGroup
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginLeft="10dp"
                            android:id="@+id/genderRadioGroup">

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/male"
                                android:id="@+id/maleRadioButton" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/female"
                                android:id="@+id/femaleRadioButton"
                                android:layout_marginLeft="20dp" />

                        </RadioGroup>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">


                        <TextView
                            style="@style/summaryCardContents"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/height" />

                        <EditText
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:ems="10"
                            android:id="@+id/heightEditText"
                            android:layout_marginLeft="10dp"
                            android:maxLength="3" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/height_centimetres" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">


                        <TextView
                            style="@style/summaryCardContents"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/weight" />

                        <EditText
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:layout_marginLeft="10dp"
                            android:id="@+id/weightEditText"
                            android:maxLength="4"
                            android:nestedScrollingEnabled="false"
                            android:inputType="numberDecimal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/weight_kg" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/summaryScreenCards"
                android:id="@+id/card_view">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/summaryCardTitle"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/focus_on_card"
                        android:id="@+id/focus_on_Title" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/iron_intake"
                        android:id="@+id/ironCheckBox" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/calorie_control"
                            android:id="@+id/calorieCheckBox" />


                        <Spinner
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/calorieSpinner"
                            android:nestedScrollingEnabled="true"
                            android:spinnerMode="dropdown"
                            android:layout_marginLeft="20dp" />

                    </LinearLayout>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/glucose"
                        android:id="@+id/glucoseCheckBox" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cholesterol"
                        android:id="@+id/cholesterolCheckBox" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_button"
                android:layout_gravity="center_horizontal"
                style="@style/AcceptButton"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:elegantTextHeight="false"
                android:id="@+id/updateDetailsButton" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>